--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,8 @@
  *= require_tree .
  *= require_self
  */
+
+body { padding-top: 60px; }
+footer { margin-top: 100px; }
+td { text-align: center; padding-left: 10px; }
+th { border-bottom: 1px solid #DDD; padding-left: 20px; }
