--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,21 +1,23 @@
+
+
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Orders</h1>
+<h1>訂單列表</h1>
 
 <table>
   <thead>
     <tr>
       <th>商店名稱</th>
-      <th>User</th>
+      <th>使用者</th>
       <th>狀態</th>
-      <th>Reject reason</th>
-      <th>Content</th>
-      <th>Accepted at</th>
-      <th>Finished at</th>
-      <th>Order fee</th>
-      <th>Delivery fee</th>
-      <th>Items fee</th>
-      <th>Tip</th>
+      <th>拒絕原因</th>
+      <th>訂單內容</th>
+      <th>訂單接受時間</th>
+      <th>訂單完成時間</th>
+      <th>總費用</th>
+      <th>遞送費用</th>
+      <th>商品費用</th>
+      <th>小費</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -44,4 +46,5 @@
 
 <br>
 
-<%= link_to 'New Order', new_order_path %>
+<%= link_to '手動增加訂單', new_order_path %>
+
