--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -8,17 +8,23 @@
   <thead>
     <tr>
       <th>訂單ID</th>
-      <th>商店名稱</th>
-      <th>使用者</th>
-      <th>狀態</th>
-      <th>拒絕原因</th>
-      <th>訂單內容</th>
       <th>訂單建立時間</th>
-      <th>訂單完成時間</th>
+      <th>使用者ID</th>
+      <th>狀態</th>
+      <th>購買商店</th>
+      <th>訂單內容</th>
+      <th>遞送地點</th>
+      <th>遞送地址</th>
+      <th>聯絡電話</th>
+      <th>遞送說明</th>
+      <th>拒絕原因</th>
+      <th>拒絕說明</th>
       <th>總費用</th>
       <th>遞送費用</th>
       <th>商品費用</th>
       <th>小費</th>
+      <th>訂單完成時間</th>
+
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -27,17 +33,22 @@
     <% @orders.each do |order| %>
       <tr>
         <td><%= order.id %></td>
-        <td><%= order.store_name %></td>
+        <td><%= order.created_at %></td>
         <td><%= order.user_id %></td>
         <td><%= order.status %></td>
-        <td><%= order.reject_reason %></td>
+        <td><%= order.store_name %></td>
         <td><%= order.content %></td>
-        <td><%= order.created_at %></td>
-        <td><%= order.finished_at %></td>
+        <td><%= order.receive_place %></td>
+        <td><%= order.receive_address %></td>
+        <td><%= order.receive_phone %></td>
+        <td><%= order.receive_note %></td>
+        <td><%= order.reject_title %></td>
+        <td><%= order.reject_reason %></td>
         <td><%= order.order_fee %></td>
         <td><%= order.delivery_fee %></td>
         <td><%= order.items_fee %></td>
         <td><%= order.tip %></td>
+        <td><%= order.finished_at %></td>
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
         <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
